--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta content="template language" name="keywords" />
-    <title>EyeSight Vision Test</title><link href="/stylesheets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" /><link href="/stylesheets/bootstrap-responsive.css" media="screen" rel="stylesheet" type="text/css" /><style type="text/css">
+    <title>EyeSight Vision Test</title><link href="stylesheets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" /><link href="stylesheets/bootstrap-responsive.css" media="screen" rel="stylesheet" type="text/css" /><style type="text/css">
       body {
         padding-top: 60px;
         padding-bottom: 40px;
       } 
     </style>
-    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="/javascripts/jquery.js" type="text/javascript"></script><link href="favicon.ico" rel="shortcut icon" /></head>
+    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="javascripts/jquery.js" type="text/javascript"></script><link href="favicon.ico" rel="shortcut icon" /></head>
   <body>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
@@ -53,5 +53,5 @@
           </div>
         </div>
       </footer>
-    </div><script src="/javascripts/bootstrap.js" type="text/javascript"></script></body>
+    </div><script src="javascripts/bootstrap.js" type="text/javascript"></script></body>
 </html>
