--- a/index.html
+++ b/index.html
@@ -21,27 +21,41 @@
             <ul class="nav">
               <li><a href="tarcze_ishinary.html">Tarcze Ishihary</a></li>
             </ul>
+            <ul class="nav">
+              <li><a href="test_amslera.html">Test Amslera</a></li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
     <div class="container">
-      <header><h1>Przetestuj swój wzrok</h1><hr />
+      <header><h1>Testy wzroku</h1><hr />
       </header>
       <article>
         <div class="row">
           <div class="span12">
-            <p>Na tej stronie możesz wykonać kilka prostych badań wzroku.</p>
-            <p>Wybierz grupę testów by rozpocząć badanie.</p>
-            <p>Po zakończeniu badania otrzymasz wyniki.</p>
-            <p>Pamiętaj że te testy nie zastąpią profesjonalnych badań wykonanych przez okulistę.</p>
+            <div class="hero-unit">
+              <h1>Przetestuj swój wzrok</h1>
+              <p>Na tej stronie możesz wykonać kilka prostych badań wzroku.</p>
+            </div>
           </div>
         </div>
         <div class="row">
+          <div class="span2">
+            <div class="thumbnail"><img src="img/ishinary_icon.png" /></div>
+          </div>
           <div class="span4">
             <h3>Tarcze Ishihary</h3>
             <p>Przetestuj możliwość rozróżniania kolorów czerwonego i zielonego.</p>
             <a class="btn" href="tarcze_ishinary.html">Tarcze Ishihary <i class="icon-arrow-right"></i></a>
+          </div>
+          <div class="span2">
+            <div class="thumbnail"><img src="img/amsler_grid_icon.png" /></div>
+          </div>
+          <div class="span4">
+            <h3>Test Amslera</h3>
+            <p>Test widzenia w obrębie dołka środkowego siatkówki, pomaga w wykryciu zwyrodnienia siatkówki lub problemów z nerwem wzrokowym.</p>
+            <a class="btn" href="test_amslera.html">Test Amslera <i class="icon-arrow-right"></i></a>
           </div>
         </div></article>
       <footer>
