--- a/tarcze_ishinary.html
+++ b/tarcze_ishinary.html
@@ -21,6 +21,9 @@
             <ul class="nav">
               <li class="active"><a href="tarcze_ishinary.html">Tarcze Ishihary</a></li>
             </ul>
+            <ul class="nav">
+              <li><a href="test_amslera.html">Test Amslera</a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -126,7 +129,7 @@
                           <li>
                             <i class="icon-play-circle"></i> Tarcze 1 - 17 zawierają liczby, tarcze 18 - 24 zawierają jeden lub dwa szlaczki.</li>
                           <li>
-                            <i class="icon-ok-circle"></i> By zdać każdy z testów musisz prawidłowo zidentyfikować liczbę lub prześledzić szlaczki.</li>
+                            <i class="icon-ok-circle"></i> Prawidłowo widząca osoba powinna być w stanie zidentyfikować liczbę lub prześledzić szlaczki na każdej tarczy.</li>
                           <li>
                             <i class="icon-time"></i> Potrzebujesz <strong>około 5 minut </strong>na skończenie tego testu.</li>
                         </ul>
@@ -145,7 +148,7 @@
                           <ul>
                             <li>
                               <strong>Zawsze możesz wrócić </strong>do tej instrukcji, dowolnej tarczy i wyników</li>
-                            <li>Aby rozpocząć od nowa przeładuj stronę lub kliknij <strong>Jeszcze raz</strong> na koncu strony z wynikami.</li>
+                            <li>Aby rozpocząć od nowa przeładuj stronę lub kliknij <strong>Jeszcze raz</strong> na końcu strony z wynikami.</li>
                           </ul>
                         </div>
                         <p>
@@ -656,7 +659,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Wynik <i class="icon-arrow-right"></i></a>
+                          <a href="#"> Wyniki <i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -667,7 +670,7 @@
                   <div class="span12">
                     <div class="row">
                       <div class="span6">
-                        <h3>Wynik badania</h3>
+                        <h3>Wyniki badania</h3>
                         <p>Znajdujące się poniżej tarcze ukazują prawidłowy wzór jaki powinna widzieć osoba bez problemów z widzeniem kolorów.</p>
                       </div>
                       <div class="span6">
@@ -1229,16 +1232,19 @@
                     </ul>
                     <div class="row">
                       <div class="span12">
-                        <hr />
                         <div class="well">
                           <h4 class="alert-heading">Dziękuje!</h4>
-                          <p>Dziękuje za skorzystanie z testu. Mam nadzieje że okazał się pomocny.</p>
-                          <ul class="pager">
-                            <li>
-                              <a class="btn-info" href="tarcze_ishinary.html"><i class="icon-refresh"></i> Jeszcze raz!</a>
-                            </li>
+                          <ul class="unstyled">
+                            <li>Dziękuje za skorzystanie z testu. Mam nadzieje że okazał się pomocny.</li>
+                            <li>Jeżeli wykazał jakieś problemy to skontaktuj się z okulistą.</li>
+                            <li>Pamiętaj że ten test nie może zastąpić profesjonalnych badań.</li>
                           </ul>
                         </div>
+                        <ul class="pager">
+                          <li>
+                            <a class="btn-info" href="tarcze_ishinary.html"><i class="icon-refresh"></i> Jeszcze raz!</a>
+                          </li>
+                        </ul>
                       </div>
                     </div>
                   </div>
