eye icon; button styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         padding-bottom: 40px;
       } 
     </style>
-    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="javascripts/jquery.js" type="text/javascript"></script><link href="favicon.ico" rel="shortcut icon" /></head>
+    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="javascripts/jquery.js" type="text/javascript"></script><link href="img/favicon.ico" rel="shortcut icon" /></head>
   <body>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
@@ -34,8 +34,7 @@
       <article>
         <div class="row">
           <div class="span12">
-            <div class="hero-unit">
-              <h1>Przetestuj swój wzrok</h1>
+            <div class="hero-unit"><img class="pull-left" style="margin-top: -20px; margin-left: -40px; margin-right: 20px" src="img/eye.png" /><h1>Przetestuj swój wzrok</h1>
               <p>Na tej stronie możesz wykonać kilka prostych badań wzroku.</p>
             </div>
           </div>
@@ -47,7 +46,7 @@
           <div class="span4">
             <h3>Tarcze Ishihary</h3>
             <p>Przetestuj możliwość rozróżniania kolorów czerwonego i zielonego.</p>
-            <a class="btn" href="tarcze_ishinary.html">Tarcze Ishihary <i class="icon-arrow-right"></i></a>
+            <a class="btn btn-primary" href="tarcze_ishinary.html">Tarcze Ishihary </a>
           </div>
           <div class="span2">
             <div class="thumbnail"><img src="img/amsler_grid_icon.png" /></div>
@@ -55,7 +54,7 @@
           <div class="span4">
             <h3>Test Amslera</h3>
             <p>Test widzenia w obrębie dołka środkowego siatkówki, pomaga w wykryciu zwyrodnienia siatkówki lub problemów z nerwem wzrokowym.</p>
-            <a class="btn" href="test_amslera.html">Test Amslera <i class="icon-arrow-right"></i></a>
+            <a class="btn btn-primary" href="test_amslera.html">Test Amslera </a>
           </div>
         </div></article>
       <footer>
