--- a/tarcze_ishinary.html
+++ b/tarcze_ishinary.html
@@ -9,7 +9,7 @@
         padding-bottom: 40px;
       } 
     </style>
-    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="javascripts/jquery.js" type="text/javascript"></script><link href="favicon.ico" rel="shortcut icon" /></head>
+    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="javascripts/jquery.js" type="text/javascript"></script><link href="img/favicon.ico" rel="shortcut icon" /></head>
   <body>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
@@ -154,7 +154,7 @@
                         <p>
                           <ul class="pager">
                             <li class="next">
-                              <a class="btn-info" href="#"> Start <i class="icon-arrow-right"></i></a>
+                              <a href="#"><strong> Start </strong><i class="icon-arrow-right"></i></a>
                             </li>
                           </ul>
                         </p>
@@ -176,7 +176,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Instrukcja </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -197,7 +197,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -218,7 +218,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -239,7 +239,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -260,7 +260,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -281,7 +281,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -302,7 +302,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -323,7 +323,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -344,7 +344,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -365,7 +365,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -386,7 +386,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -407,7 +407,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -428,7 +428,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -449,7 +449,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -470,7 +470,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -491,7 +491,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -512,7 +512,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -533,7 +533,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -554,7 +554,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -575,7 +575,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -596,7 +596,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -617,7 +617,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -638,7 +638,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Następna <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Następna </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -659,7 +659,7 @@
                           <a href="#"><i class="icon-arrow-left"></i> Poprzednia </a>
                         </li>
                         <li class="next">
-                          <a href="#"> Wyniki <i class="icon-arrow-right"></i></a>
+                          <a href="#"><strong> Wyniki </strong><i class="icon-arrow-right"></i></a>
                         </li>
                       </ul>
                     </p>
@@ -1242,7 +1242,7 @@
                         </div>
                         <ul class="pager">
                           <li>
-                            <a class="btn-info" href="tarcze_ishinary.html"><i class="icon-refresh"></i> Jeszcze raz!</a>
+                            <a href="tarcze_ishinary.html"><i class="icon-refresh"></i><strong> Jeszcze raz! </strong></a>
                           </li>
                         </ul>
                       </div>
