--- a/test_amslera.html
+++ b/test_amslera.html
@@ -9,7 +9,7 @@
         padding-bottom: 40px;
       } 
     </style>
-    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="javascripts/jquery.js" type="text/javascript"></script><link href="favicon.ico" rel="shortcut icon" /></head>
+    <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="javascripts/jquery.js" type="text/javascript"></script><link href="img/favicon.ico" rel="shortcut icon" /></head>
   <body>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
@@ -86,7 +86,7 @@
                         <p>
                           <ul class="pager">
                             <li class="next">
-                              <a class="btn-info" href="#"> Start <i class="icon-arrow-right"></i></a>
+                              <a href="#"><strong> Start </strong><i class="icon-arrow-right"></i></a>
                             </li>
                           </ul>
                         </p>
@@ -106,7 +106,7 @@
                               <a href="#"><i class="icon-arrow-left"></i> Instrukcja </a>
                             </li>
                             <li class="next">
-                              <a href="#"> Wynik <i class="icon-arrow-right"></i></a>
+                              <a href="#"><strong> Wynik </strong><i class="icon-arrow-right"></i></a>
                             </li>
                           </ul>
                         </p>
@@ -142,7 +142,7 @@
                               <a href="#"><i class="icon-arrow-left"></i> Siatka Amslera </a>
                             </li>
                             <li class="next">
-                              <a class="btn-info" href="test_amslera.html"><i class="icon-refresh"></i> Jeszcze raz!</a>
+                              <a href="test_amslera.html"><i class="icon-refresh"></i><strong> Jeszcze raz! </strong></a>
                             </li>
                           </ul>
                         </p>
