eye icon on menu bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse"><span class="icon-bar"></span></a><a class="brand" href="index.html">EyeSight</a><div class="nav-collapse">
+          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse"><span class="icon-bar"></span></a><a href="index.html"><img class="pull-left" style="padding-top: 6px" src="img/eye_icon.png" /></a><a class="brand" href="index.html">EyeSight </a>
+          <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="index.html">Testy wzroku</a></li>
             </ul>
