redgreen test and new index layout

--- a/redgreen.html
+++ b/redgreen.html
@@ -23,17 +23,17 @@
               <li><a href="tarcze_ishinary.html">Tarcze Ishihary</a></li>
             </ul>
             <ul class="nav">
-              <li class="active"><a href="test_amslera.html">Test Amslera</a></li>
+              <li><a href="test_amslera.html">Test Amslera</a></li>
             </ul>
             <ul class="nav">
-              <li><a href="redgreen.html">Test czerwono - zielony</a></li>
+              <li class="active"><a href="redgreen.html">Test czerwono - zielony</a></li>
             </ul>
           </div>
         </div>
       </div>
     </div>
     <div class="container">
-      <header><h1>Test Amslera</h1><hr />
+      <header><h1>Test czerwono - zielony</h1><hr />
       </header>
       <article>
         <div class="row">
@@ -46,7 +46,7 @@
                       <a data-toggle="tab" href="#pane-instruction" style="outline: 0">Instrukcja</a>
                     </li>
                     <li id="tab-grid">
-                      <a data-toggle="tab" href="#pane-grid" style="outline: 0">Siatka Amslera</a>
+                      <a data-toggle="tab" href="#pane-grid" style="outline: 0">Plansza czerwono - zielona</a>
                     </li>
                     <li id="tab-results">
                       <a data-toggle="tab" href="#pane-results" style="outline: 0">Wynik</a>
@@ -62,9 +62,9 @@
                         <h3>O teście</h3>
                         <ul class="unstyled">
                           <li>
-                            <i class="icon-play-circle"></i> Ten test polega na obserwacji zniekształceń widzianej siatki.</li>
+                            <i class="icon-play-circle"></i> Ten test polega na obserwacji czarności wzorów na tle zielonym i czerwonym.</li>
                           <li>
-                            <i class="icon-ok-circle"></i> Prawidłowo widząca osoba powinna widzieć proste pionowe i poziome linie rozłożone w równych odstępach.</li>
+                            <i class="icon-ok-circle"></i> Prawidłowo widząca osoba powinna widzieć wzory na tle zielonym tak samo czarne jak wzory na tle czerwonym.</li>
                           <li>
                             <i class="icon-time"></i> Potrzebujesz <strong>około 1 minuty  </strong>na skończenie tego testu.</li>
                         </ul>
@@ -72,12 +72,13 @@
                       <div class="span6">
                         <h3>Instrukcja</h3>
                         <ol>
-                          <li>Jeżeli korzystasz z okularów do czytania - <strong>załóż je</strong>.</li>
-                          <li>Siądź około <strong>30 centymetrów od monitora</strong>, tak aby widziana siatka była <strong>na wysokości wzroku</strong>.</li>
+                          <li>Jeżeli korzystasz z okularów do czytania - <strong>załóż je</strong> aby sprawdzić prawidłowość ich korekcji.</li>
+                          <li>Zalecane jest <strong>słabo oświetlone pomieszczenie</strong>.</li>
+                          <li>Ustaw plansze by była na <strong>środku monitora</strong>.</li>
+                          <li>Ustań w odległości <strong>5 - 6 metrów od monitora</strong>.</li>
                           <li>
-                            <strong>Zasłoń jedno oko</strong>, drugim patrz w <strong>centralny punkt siatki</strong>.</li>
-                          <li>Koncentruj wzrok tylko i wyłącznie na <strong>środkowym punkcie</strong>.</li>
-                          <li>Oceń czy wszystkie linie, które widzisz <strong>pozostają liniami prostymi</strong>, czy wszystkie kwadraty <strong>mają taki sam wymiar</strong>.</li>
+                            <strong>Zasłoń jedno oko</strong>.</li>
+                          <li>Patrząc na plansze zaobserwuj na którym tle znaki są <strong>bardziej czarne</strong>.</li>
                           <li>Wykonaj test <strong>dla każdego oka oddzielnie</strong>.</li>
                         </ol>
                         <div class="alert alert-info">
@@ -101,9 +102,8 @@
                 <div class="tab-pane" id="pane-grid">
                   <div class="span12">
                     <div class="row">
-                      <div class="span2">&nbsp;</div>
-                      <div class="span8">
-                        <div class="thumbnail"><img src="img/amsler_grid.png" /></div>
+                      <div class="span12">
+                        <div class="thumbnail"><img src="img/redgreen.png" /></div>
                         <p>
                           <ul class="pager">
                             <li class="previous">
@@ -114,7 +114,6 @@
                             </li>
                           </ul>
                         </p>
-                        <div class="span2">&nbsp;</div>
                       </div>
                     </div>
                   </div>
@@ -124,12 +123,12 @@
                     <div class="row">
                       <div class="span8">
                         <h3>Wynik badania</h3>
-                        <p>Zniekształcona siatka przedstawiona po prawej ukazuje przykładowy obraz jaki może widzieć osoba z zwyrodnieniem siatkówki lub problemem z nerwem wzrokowym.</p>
+                        <p>Kolor czerwony skupia się w innym punkcie oka niż kolor zielony.</p>
                         <ul class="unstyled">
                           <li>
-                            <i class="icon-ok"></i> Jeżeli widziałeś równoległe linie oznaczające kwadraty o takich samych wymiarach to nie masz opisanego problemu.</li>
+                            <i class="icon-ok"></i> Prawidłowo widząca osoba widzi znaki na czerwonym i zielonym tle tak samo czarne.</li>
                           <li>
-                            <i class="icon-warning-sign"></i> Jeżeli widziałeś siatkę zniekształconą w podobny sposób jak przedstawiono po prawej to prawdopodobnie masz zwyrodnienie siatkówki lub problem z nerwem wzrokowym.</li>
+                            <i class="icon-warning-sign"></i> Jeżeli widziałeś znaki na tle czerwonym bardziej czarne niż na tle zielonym potrzebna jest ujemna korekcja. Jeżeli widziałeś znaki na tle zielonym bardziej niż czerwonym potrzebna jest dodatnia korekcja.</li>
                         </ul>
                         <hr />
                         <div class="well">
@@ -143,16 +142,25 @@
                         <p>
                           <ul class="pager">
                             <li class="previous">
-                              <a href="#"><i class="icon-arrow-left"></i> Siatka Amslera </a>
+                              <a href="#"><i class="icon-arrow-left"></i> Plansza czerwono - zielona </a>
                             </li>
                             <li class="next">
-                              <a href="test_amslera.html"><i class="icon-refresh"></i><strong> Jeszcze raz! </strong></a>
+                              <a href="redgreen.html"><i class="icon-refresh"></i><strong> Jeszcze raz! </strong></a>
                             </li>
                           </ul>
                         </p>
                       </div>
                       <div class="span4">
-                        <div class="thumbnail"><img src="img/amsler_grid_problem.png" /></div>
+                        <div class="row">
+                          <div class="span4">
+                            <div class="thumbnail"><img src="img/redgreen_results.png" /></div>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="span4">
+                            <div class="thumbnail"><img src="img/redgreen_results2.png" /></div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
