--- a/tarcze_ishinary.html
+++ b/tarcze_ishinary.html
@@ -25,6 +25,9 @@
             <ul class="nav">
               <li><a href="test_amslera.html">Test Amslera</a></li>
             </ul>
+            <ul class="nav">
+              <li><a href="redgreen.html">Test czerwono - zielony</a></li>
+            </ul>
           </div>
         </div>
       </div>
