--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <ul class="nav">
               <li><a href="test_amslera.html">Test Amslera</a></li>
             </ul>
+            <ul class="nav">
+              <li><a href="redgreen.html">Test czerwono - zielony</a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -41,22 +44,37 @@
           </div>
         </div>
         <div class="row">
-          <div class="span2">
-            <div class="thumbnail"><img src="img/ishinary_icon.png" /></div>
+          <div class="span3">
+            <div class="thumbnail"><img src="img/ishinary_icon.png" /><div class="caption">
+                <h3>Tarcze Ishihary</h3>
+                <p>Przetestuj możliwość rozróżniania kolorów czerwonego i zielonego.</p>
+                <p>
+                  <a class="btn btn-primary" href="tarcze_ishinary.html">Tarcze Ishihary </a>
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="span4">
-            <h3>Tarcze Ishihary</h3>
-            <p>Przetestuj możliwość rozróżniania kolorów czerwonego i zielonego.</p>
-            <a class="btn btn-primary" href="tarcze_ishinary.html">Tarcze Ishihary </a>
+          <div class="span3">
+            <div class="thumbnail"><img src="img/amsler_grid_icon.png" /><div class="caption">
+                <h3>Test Amslera</h3>
+                <p>Test widzenia w obrębie dołka środkowego siatkówki, pomaga w wykryciu zwyrodnienia siatkówki lub problemów z nerwem wzrokowym.</p>
+                <p>
+                  <a class="btn btn-primary" href="test_amslera.html">Test Amslera </a>
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="span2">
-            <div class="thumbnail"><img src="img/amsler_grid_icon.png" /></div>
+          <div class="span3">
+            <div class="thumbnail"><img src="img/redgreen_icon.png" /><div class="caption">
+                <h3>Test czerwono - zielony</h3>
+                <p>Przetestuj ostrość widzenia i korekcji okularów.</p>
+                <p>
+                  <a class="btn btn-primary" href="redgreen.html">Test czerwono - zielony </a>
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="span4">
-            <h3>Test Amslera</h3>
-            <p>Test widzenia w obrębie dołka środkowego siatkówki, pomaga w wykryciu zwyrodnienia siatkówki lub problemów z nerwem wzrokowym.</p>
-            <a class="btn btn-primary" href="test_amslera.html">Test Amslera </a>
-          </div>
+          <div class="span3">&nbsp;</div>
         </div></article>
       <footer>
         <hr />
